--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Font family CDN -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Comfortaa&family=Alfa+Slab+One&family=Rubik&display=swap"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" href="./logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
